--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@bitnoi.se/react-scheduler": "^0.3.1",
     "react": "^18.3.1",
     "react-calendar-timeline": "^0.28.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vis-timeline": "^7.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
