--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@bitnoi.se/react-scheduler": "^0.3.1",
+    "chart.js": "^4.4.7",
     "react": "^18.3.1",
     "react-calendar-timeline": "^0.28.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "vis-timeline": "^7.7.3"
   },
