--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@bitnoi.se/react-scheduler": "^0.3.1",
     "chart.js": "^4.4.7",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.3.1",
     "react-calendar-timeline": "^0.28.0",
     "react-chartjs-2": "^5.2.0",
